# easy-print

./: CMakeLists.txt  README.md  debug_vars.cpp  debug_vars.hpp  example.cpp
.github/workflows/: ci.yaml
cmake/: debug_varsConfig.cmake.in  easyPrintConfig.cmake.in
include/: debug_vars.hpp
tests/: CMakeLists.txt  tests.cpp
